--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -41,4 +41,4 @@ jobs:
           timeout: 120000
           log-level: verbose
           local-dir: frontend/dist/
-          server-dir: ${{ endsWith(secrets.HOSTINGER_REMOTE_DIR, '/') && secrets.HOSTINGER_REMOTE_DIR || format('{0}/', secrets.HOSTINGER_REMOTE_DIR) }}
+          server-dir: public_html/
